{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 430,
  "lineage": "fcc2126f-6be8-bf79-a9a1-594718dff3e9",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:288761760029:internet-gateway/igw-04e14b7730cfe2915",
            "id": "igw-04e14b7730cfe2915",
            "owner_id": "288761760029",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-0f6c90d59dbba2383"
          },
          "dependencies": [
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04e14b7730cfe2915",
            "id": "r-rtb-0527a59c7b16d37b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0527a59c7b16d37b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.public_rt",
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:288761760029:route-table/rtb-0c17f49d69464fdee",
            "id": "rtb-0c17f49d69464fdee",
            "owner_id": "288761760029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "private-rout-table"
            },
            "tags_all": {
              "name": "private-rout-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6c90d59dbba2383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:288761760029:route-table/rtb-0527a59c7b16d37b9",
            "id": "rtb-0527a59c7b16d37b9",
            "owner_id": "288761760029",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e14b7730cfe2915",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public-rout-table"
            },
            "tags_all": {
              "name": "public-rout-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6c90d59dbba2383"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f603483f66c8ecd2",
            "route_table_id": "rtb-0527a59c7b16d37b9",
            "subnet_id": "subnet-004fd14890f48a179"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public_rt",
            "module.VPC.aws_subnet.subnet-terr-1",
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-to-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055f0941e81f933c6",
            "route_table_id": "rtb-0c17f49d69464fdee",
            "subnet_id": "subnet-01859fa1cd31a5179"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private_rt",
            "module.VPC.aws_subnet.private-subnet-terr-2",
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-to-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b85e5a49e1b43aab",
            "route_table_id": "rtb-0527a59c7b16d37b9",
            "subnet_id": "subnet-05b403e01ad3ee846"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public_rt",
            "module.VPC.aws_subnet.subnet-terr-2",
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-terr-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:288761760029:subnet/subnet-01859fa1cd31a5179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01859fa1cd31a5179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288761760029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-terr-2"
            },
            "tags_all": {
              "Name": "private-subnet-terr-2"
            },
            "vpc_id": "vpc-0f6c90d59dbba2383"
          },
          "dependencies": [
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-terr-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:288761760029:subnet/subnet-004fd14890f48a179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004fd14890f48a179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288761760029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-terr-1"
            },
            "tags_all": {
              "Name": "subnet-terr-1"
            },
            "vpc_id": "vpc-0f6c90d59dbba2383"
          },
          "dependencies": [
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-terr-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:288761760029:subnet/subnet-05b403e01ad3ee846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b403e01ad3ee846",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288761760029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-terr-2"
            },
            "tags_all": {
              "Name": "subnet-terr-2"
            },
            "vpc_id": "vpc-0f6c90d59dbba2383"
          },
          "dependencies": [
            "module.VPC.aws_vpc.tf_vpc",
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:288761760029:vpc/vpc-0f6c90d59dbba2383",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d9446e8a2c58e69",
            "default_route_table_id": "rtb-0c0c7668cf1f62398",
            "default_security_group_id": "sg-0be12730a60cc665c",
            "dhcp_options_id": "dopt-0eb36c1f397d9259d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f6c90d59dbba2383",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0c7668cf1f62398",
            "owner_id": "288761760029"
          },
          "dependencies": [
            "module.iam-policy.aws_iam_policy.eks_k8s_admin",
            "module.iam-policy.aws_iam_role.eks_role",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_k8s_admin_attach",
            "module.iam-policy.aws_iam_role_policy_attachment.eks_policy_attach"
          ]
        }
      ]
    }
  ]
}